--- a/_data/social.yml
+++ b/_data/social.yml
@@ -11,7 +11,7 @@ github: "doducthao"
 google_plus:
 instagram:
 keybase:
-linkedin:  "https://www.linkedin.com/in/thao-do-2193361a6/" # Full URL
+linkedin:  "https://www.linkedin.com/in/duc-thao-do-2193361a6/" # Full URL
 pinterest:
 reddit:
 soundcloud:
@@ -36,6 +36,6 @@ share:
   pinterest:
   pocket:
   reddit:
-  linkedin:
-  wordpress: true
+  linkedin: true
+  wordpress: 
   email:
