remove social media

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,7 +4,7 @@ email_address: "mathddt1996@gmail.com" # Full email address, e.g. "sam@example.c
 behance:
 bitbucket:
 dribbble:
-facebook: "dt.do.5"
+facebook:
 flickr:
 gitlab:
 github: "doducthao"
